@@ -1,35 +1,0 @@
-
-MAINTAINERCLEANFILES = Makefile.in
-
-noinst_LTLIBRARIES = libgdtoa.la
-
-libgdtoa_la_SOURCES = \
-arithchk.c \
-dmisc.c \
-dtoa.c \
-gd_arith.h \
-g_dfmt.c \
-gd_qnan.h \
-gdtoa.c \
-gdtoa_fltrnds.h \
-gdtoa.h \
-gdtoaimp.h \
-gethex.c \
-g_ffmt.c \
-g__fmt.c \
-gmisc.c \
-g_xfmt.c \
-hd_init.c \
-hexnan.c \
-misc.c \
-qnan.c \
-smisc.c \
-strtodg.c \
-strtof.c \
-strtopx.c \
-sum.c \
-ulp.c
-
-libgdtoa_la_LDFLAGS = -no-undefined -Wl,--enable-auto-import
-
-EXTRA_DIST = README README.mingw
